// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Bar component should render the search bar component 1`] = `
<div
  className="search_bar"
>
  <Form
    id="search-bar-form"
    method="post"
    onSubmit={[Function]}
  >
    <input
      name="authenticity_token"
      type="hidden"
    />
    <TextInput
      hideLabel={true}
      id="search_text"
      labelText="Search"
      name="search[text]"
      onChange={[Function]}
      placeholder="Search"
      title="Search by Name within results"
      value=""
    />
    <Button
      className="search_button"
      disabled={false}
      hasIconOnly={true}
      iconDescription="Search"
      onClick={[Function]}
      renderIcon={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        }
      }
      tooltipPosition="bottom"
    />
  </Form>
  <Button
    data-target="#advsearchModal"
    data-toggle="modal"
    disabled={false}
    hasIconOnly={true}
    iconDescription="Advanced Search"
    id="adv_search"
    onClick={[Function]}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    title={"Advanced Search"}
    tooltipAlignment="end"
    tooltipPosition="bottom"
    type="button"
  />
</div>
`;

exports[`Search Bar component should render the search bar component with advanced search 1`] = `
<div
  className="search_bar"
>
  <Form
    id="search-bar-form"
    method="post"
    onSubmit={[Function]}
  >
    <input
      name="authenticity_token"
      type="hidden"
    />
    <TextInput
      hideLabel={true}
      id="search_text"
      labelText="Search"
      name="search[text]"
      onChange={[Function]}
      placeholder="Search"
      title="Search by Name within results"
      value=""
    />
    <Button
      className="search_button"
      disabled={false}
      hasIconOnly={true}
      iconDescription="Search"
      onClick={[Function]}
      renderIcon={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        }
      }
      tooltipPosition="bottom"
    />
  </Form>
  <Button
    data-target="#advsearchModal"
    data-toggle="modal"
    disabled={false}
    hasIconOnly={true}
    iconDescription="Advanced Search"
    id="adv_search"
    onClick={[Function]}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    title={"Advanced Search"}
    tooltipAlignment="end"
    tooltipPosition="bottom"
    type="button"
  />
</div>
`;

exports[`Search Bar component should render the search bar component with search text and advanced search 1`] = `
<div
  className="search_bar"
>
  <Form
    id="search-bar-form"
    method="post"
    onSubmit={[Function]}
  >
    <input
      name="authenticity_token"
      type="hidden"
    />
    <TextInput
      hideLabel={true}
      id="search_text"
      labelText="Search"
      name="search[text]"
      onChange={[Function]}
      placeholder="Search"
      title="Search by Name within results"
      value="nameSearch"
    />
    <Button
      disabled={false}
      hasIconOnly={true}
      iconDescription="Clear"
      kind="secondary"
      onClick={[Function]}
      renderIcon={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        }
      }
      tooltipPosition="bottom"
      type="reset"
    />
    <Button
      className="search_button"
      disabled={false}
      hasIconOnly={true}
      iconDescription="Search"
      onClick={[Function]}
      renderIcon={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        }
      }
      tooltipPosition="bottom"
    />
  </Form>
  <Button
    data-target="#advsearchModal"
    data-toggle="modal"
    disabled={false}
    hasIconOnly={true}
    iconDescription="Advanced Search"
    id="adv_search"
    onClick={[Function]}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    title={"Advanced Search"}
    tooltipAlignment="end"
    tooltipPosition="bottom"
    type="button"
  />
</div>
`;
